# charybdis-zmk-module

./: build.yaml  replit.nix
.github/workflows/: build.yml
boards/shields/charybdis/: charybdis.keymap  charybdis_left.conf  charybdis_right.conf
config/: charybdis.conf  charybdis.keymap  west.yml
config/boards/shields/splinky_v2/: Kconfig.defconfig  Kconfig.shield  splinky_v2.dtsi  splinky_v2_left.overlay  splinky_v2_right.overlay
config/boards/shields/splinky_v3/: kconfig.defconfig  kconfig.shield  splinky_v3.dtsi  splinky_v3_left.overlay  splinky_v3_right.overlay
zmk/app/: CMakeLists.txt
zmk/app/src/: main.c
